oops, regexp bug in new wiki formatter. show help for now even if it's in the way on small screens space bug

--- a/root/.static/mojomojo.css
+++ b/root/.static/mojomojo.css
@@ -197,7 +197,7 @@ textarea#body {
   border-bottom:solid #888; 
   border-right:solid #888; 
   background: #ddd; 
-  z-index:-1;
+  z-index:1;
 }
 
 #TextileHelp table {
